java-playground/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-playground-service
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: api-server
  selector:
    app: java-playground-app
  type: LoadBalancer
