java-playground/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-playground-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /java-playground
        pathType: Prefix
        backend:
          service:
            name: java-playground-service
            port:
              number: 8080
